feat: Prepare for deploy to test
Changes:
- Improved most of the UI
- Added ChapterDetails with Markdown rendering

BREAKING CHANGES
- Added id property to Courses and Chapter types

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
 @plugin "daisyui" {
     themes: dark --default, night
 }
+@plugin "@tailwindcss/typography";
 
 @theme {
     --font-main: "Inter", serif;
